# backend/src/database/entities/Follow.ts
@@ -1,0 +1,11 @@
+import {Column, Entity, BaseEntity, PrimaryColumn, PrimaryGeneratedColumn} from 'typeorm';
+
+@Entity()
+export default class Follow extends BaseEntity{
+    @PrimaryColumn({type: 'int'})
+    follwerId!: number;
+
+    @PrimaryColumn({type: 'int'})
+    followedUserId!: number;
+
+}
