# backend/src/swagger/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: '3.0.0'
 servers: 
-  - url: http://34.64.244.115:8080
+  - url: http://34.64.244.115:8080/
 info:
   description: This is a simple API
   version: "1.0.0"
@@ -23,7 +23,7 @@ paths:
     get:
       tags:
         - user
-      summary: 이메일 중복 확인
+      summary: 가입한 사람인지 아닌지 확인가능
       parameters:
         - in: query
           name: email
@@ -32,15 +32,15 @@ paths:
             type: string
       responses:
         '200':
-          description: Return email search result
+          description: 사람이 있으면 1, 없으면 0
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: number
         '400':
           description: bad input parameter
         '404':
-          description: Email Available
+          description: don't have data
   /user/nicknameCheck:
     get:
       tags:
@@ -54,15 +54,15 @@ paths:
             type: string
       responses:
         '200':
-          description: Return nickname search result
+          description: 겹치면 1, 없으면 0
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: number
         '400':
           description: bad input parameter
         '404':
-          description: nickname Available
+          description: don't have nickname 
   
   /user/signin:
     post:
@@ -89,13 +89,15 @@ paths:
         name: keyword
         schema:
           type: string
+        required: true
+
       responses:
         '200':
           description: user info
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Story'
+                $ref: '#/components/schemas/User'
         '400':
           description: invalid
           
@@ -103,31 +105,15 @@ paths:
     put:
       tags: 
         - like
-      summary: 좋아요 한 스토리 추가하고 다시 유저정보 받아옴
+      summary: 좋아요 추가와 좋아요 수 업데이트
       requestBody:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  description: userId
-                  type: number
-                likedStoryIds:
-                  description: Updated liked stories
-                  type: array
-                  items: 
-                    type: number
-                storyLikes:
-                  description: 스토리 좋아유 수
-                  type: number
+              $ref: '#/components/schemas/Like'
       responses:
-        '200':
-          description: get updated user info
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
+        default:
+          description: successful operation
   /follow:
     put:
       tags: 
@@ -137,24 +123,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                followingUserId:
-                  description: 유저 id
-                  type: number
-                followingUserIds:
-                  description: 유저가 팔로우 중인 사람 리스트 
-                  type: array
-                  items:
-                    type: number
-                followedUserId:
-                  description: 크리에이터 id
-                  type: number
-                followerUserIds:
-                  description: 크리에이터를 구독하는 팔로워 리스트 
-                  type: array
-                  items:
-                    type: number
+              $ref: '#/components/schemas/Follow'
       responses:
         default:
           description: good
@@ -168,16 +137,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  description: storyId
-                  type: number
-                comments:
-                  description: comment array
-                  type: array
-                  items:
-                    $ref: '#/components/schemas/Comment'
+              $ref: '#/components/schemas/Comment'
       responses:
         default:
           description: good
@@ -202,7 +162,7 @@ paths:
     get:
       tags:
         - story
-      summary: bring all stories
+      summary: bring stories
       parameters: 
       - in: query
         name: keyword
@@ -219,36 +179,15 @@ paths:
                   $ref: '#/components/schemas/Story'
         '400':
           description: invalid
-          
-  # /story/searchNickname:
-  #   get:
-  #     tags:
-  #       - story
-  #     summary: search story in nickname
-  #     parameters: 
-  #     - in: query
-  #       name: keyword
-  #       schema:
-  #         type: string
-  #     responses:
-  #       '200':
-  #         description: array of stories having keyword in nickname
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: '#/components/schemas/Story'
-  #       '400':
-  #         description: invalid
-  /story/{id}:
+  
+  /story/click:
     get:
       tags:
         - story
       summary: bring clicked story
       parameters: 
       - name: id
-        in: path
+        in: query
         schema:
           type: number
         required: true
@@ -261,41 +200,6 @@ paths:
                 $ref: '#/components/schemas/Story'
         '400':
           description: invalid
-          
-  /count:
-    get:
-      summary: get CountDB
-      description: 0번 id 입력해서 userCount 불러오기, 1번 입력해서 storyCount
-      parameters:
-      - in: query
-        name: id
-        required: true
-        schema:
-          type: number
-      responses:
-        '200':
-          description: get current counts
-          content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Count'
-        '400':
-          description: sth wrong
-    put:
-      summary: update CountDB
-      description: userCount 업데이트, storyCount
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Count'
-        description:
-          업데이트한 정보
-      responses:
-        '400':
-          description: Invalid id supplied
-        '404':
-          description: not found
         
   
 
@@ -310,8 +214,8 @@ components:
         - showBirth
         - isCreator
         - nickname
-        - likedStoryIds
-        - followingUserIds
+        # - likedStoryIds
+        # - followingUserIds
         - profileImageSrc
       properties:
         id:
@@ -329,39 +233,37 @@ components:
           type: boolean
         nickname:
           type: string
-        likedStoryIds:
-          type: array
-          items: 
-            type: number
-            format: int64
-        followingUserIds:
-          type: array
-          items: 
-            type: number
-            format: int64
+        # likedStoryIds:
+        #   type: array
+        #   items: 
+        #     type: number
+        #     format: int64
+        # followingUserIds:
+        #   type: array
+        #   items: 
+        #     type: number
+        #     format: int64
         profileImageSrc:
           type: string
-        followerUserIds:
-          type: array
-          items: 
-            type: number
-            format: int64
-        myStoryIds:
-          type: array
-          items: 
-            type: number
-            format: int64
+        # followerUserIds:
+        #   type: array
+        #   items: 
+        #     type: number
+        #     format: int64
+        # myStoryIds:
+        #   type: array
+        #   items: 
+        #     type: number
+        #     format: int64
     Story:
       type: object
       required:
-        - id
         - creatorNickname
         - title
         - thumbnailImageSrc
         - category
         - audioFileSrc
         - likes
-        - comments
         - createdAt
       properties:
         id:
@@ -380,10 +282,6 @@ components:
         likes:
           type: number
           format: int64
-        comments:
-          type: array
-          items:
-            $ref: '#/components/schemas/Comment'
         createdAt:
           type: string
           format: date-time
@@ -391,7 +289,6 @@ components:
     Comment:
       type: object
       required:
-        - id
         - userId
         - content
         - createdAt
@@ -408,14 +305,27 @@ components:
           type: string
           format: date-time
           example: '2016-08-29T09:12:33.001Z'
-    Count:
+    Follow:
       type: object
       required:
-        - id
+        - followerId
+        - followedUserId
       properties:
-        id:
+        followerId:
           type: number
           format: int64
-        Count:
+        followedUserId:
+          type: number
+          format: int64
+    Like:
+      type: object
+      required:
+        - userId
+        - likedStoryId
+      properties:
+        userId:
+          type: number
+          format: int64
+        likedStoryId:
           type: number
           format: int64
